Se crean Modelos y CRUD de Fabricantes y Proveedores // Se agregan detalles de hrefs en vistas Deposito

--- a/App_LUMINOVA/templates/deposito/depo_seleccion.html
+++ b/App_LUMINOVA/templates/deposito/depo_seleccion.html
@@ -306,7 +306,7 @@
                     </tr>
                     <tr>
                         <td colspan="3" class="bg-primary text-center pt-3" style="padding-left: 90px;">
-                            <a class="btn border-white text-primary text-white" style="background-color: #014BAC; width: 180px; height: 40px; border-radius: 15px;" href="{% url 'App_LUMINOVA:depo_enviar' %}">Enviar Insumos</a>
+                            <a class="btn border-white text-primary text-white" style="background-color: #014BAC; width: 180px; height: 40px; border-radius: 15px;" href="#">Enviar Insumos</a>
                         </td>
                     </tr>
                 </tbody>
