--- a/App_LUMINOVA/templates/compras/compras_lista_oc.html
+++ b/App_LUMINOVA/templates/compras/compras_lista_oc.html
@@ -5,14 +5,13 @@
 {% block title %}{{ titulo_seccion|default:"Órdenes de Compra" }}{% endblock %}
 
 {% block sidebar_content %}
-    {% include 'compras/compras_sidebar.html' %} {# Crea este sidebar #}
+    {% include 'compras/compras_sidebar.html' %} 
 {% endblock %}
 
 {% block content %}
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2">{{ titulo_seccion }}</h1>
     <div class="btn-toolbar mb-2 mb-md-0">
-        {# Enlace a una futura vista/modal para crear OC #}
         <a href="#" class="btn btn-primary"> 
             <i class="bi bi-plus-circle"></i> Nueva Orden de Compra
         </a>
@@ -56,7 +55,7 @@
                 </td>
                 <td>{{ oc.numero_tracking|default_if_none:"N/A" }}</td>
                 <td class="text-center">
-                     <a href="#" class="btn btn-sm btn-outline-primary" title="Ver Detalles"><i class="bi bi-eye"></i></a>
+                    <a href="#" class="btn btn-sm btn-outline-primary" title="Ver Detalles"><i class="bi bi-eye"></i></a>
                 </td>
             </tr>
             {% empty %}
