--- a/App_LUMINOVA/templates/deposito/categoria_producto_terminado_confirm_delete.html
+++ b/App_LUMINOVA/templates/deposito/categoria_producto_terminado_confirm_delete.html
@@ -1,6 +1,6 @@
 {% extends 'padre.html' %}
 
-{% block title %}Confirmar Eliminación - {{ categoria.nombre }}{% endblock %} {# Asumiendo context_object_name = 'categoria' #}
+{% block title %}Confirmar Eliminación - {{ categoria.nombre }}{% endblock %}
 
 {% block sidebar_content %}
     <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-primary sidebar collapse border-end full-height" style="border-top-left-radius: 25px; border-top-right-radius: 25px;">
@@ -35,9 +35,6 @@
                 </div>
                 <div class="card-body">
                     <p class="fs-5">¿Estás seguro de que deseas eliminar la categoría de producto terminado "<strong>{{ categoria.nombre }}</strong>"?</p>
-                    
-                    {# Verificar si la categoría tiene productos terminados asociados #}
-                    {# Asumiendo related_name='productos_terminados' en el modelo ProductoTerminado #}
                     {% if categoria.productos_terminados.all %} 
                         <div class="alert alert-warning" role="alert">
                             <strong>¡Atención!</strong> Esta categoría contiene <strong>{{ categoria.productos_terminados.count }}</strong> producto(s) terminado(s).
