--- a/App_LUMINOVA/templates/deposito/categoria_producto_terminado_crear.html
+++ b/App_LUMINOVA/templates/deposito/categoria_producto_terminado_crear.html
@@ -26,7 +26,7 @@
                     </a>
                 </li>
                 <li class="nav-item mt-2">
-                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center active"> {# Marcar como activo #}
+                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center active">
                         <i class="bi bi-bookmark-plus-fill me-2"></i> <span class="ms-2">Agregar Categoría Prod. Term.</span>
                     </a>
                 </li>
@@ -44,7 +44,7 @@
 <div class="container mt-4">
     <h2>Crear Nueva Categoría de Producto Terminado</h2>
     <hr>
-    <form method="post" enctype="multipart/form-data"> {# La action se infiere de la URL actual para CreateView #}
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <div class="mt-3">
