--- a/App_LUMINOVA/templates/ventas/ventas_lista_ov.html
+++ b/App_LUMINOVA/templates/ventas/ventas_lista_ov.html
@@ -37,7 +37,7 @@
         <tbody>
             {% for ov in ordenes_list %}
             <tr>
-                <td><a href="#">{{ ov.numero_ov }}</a></td> {# Enlace a detalle de OV (futuro) #}
+                <td><a href="#">{{ ov.numero_ov }}</a></td> 
                 <td>{{ ov.fecha_creacion|date:"d/m/Y H:i" }}</td>
                 <td>{{ ov.cliente.nombre|default_if_none:"N/A" }}</td>
                 <td>
@@ -59,7 +59,7 @@
                         {% elif ov.estado == 'COMPLETADA' %}bg-success
                         {% elif ov.estado == 'CANCELADA' %}bg-danger
                         {% else %}bg-light text-dark{% endif %}">
-                        {{ ov.get_estado_display }} {# O ov.get_estado_display_custom si lo tienes #}
+                        {{ ov.get_estado_display }} 
                     </span>
                 </td>
                 <td>
