--- a/App_LUMINOVA/templates/compras/compras_lista_oc.html
+++ b/App_LUMINOVA/templates/compras/compras_lista_oc.html
@@ -5,14 +5,14 @@
 {% block title %}{{ titulo_seccion|default:"Órdenes de Compra" }}{% endblock %}
 
 {% block sidebar_content %}
-    {% include 'compras/compras_sidebar.html' %} 
+    {% include 'compras/compras_sidebar.html' %}
 {% endblock %}
 
 {% block content %}
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-    <h1 class="h2">{{ titulo_seccion }}</h1>
+    <h1 class="text center">{{ titulo_seccion }}</h1>
     <div class="btn-toolbar mb-2 mb-md-0">
-        <a href="#" class="btn btn-primary"> 
+        <a href="#" class="btn btn-primary">
             <i class="bi bi-plus-circle"></i> Nueva Orden de Compra
         </a>
     </div>
@@ -21,23 +21,23 @@
 {% bootstrap_messages %}
 
 <div class="table-responsive mt-3">
-    <table class="table table-striped table-hover">
-        <thead class="table-light">
+    <table class="table table-hover">
+        <thead style="background-color: #014BAC;">
             <tr>
-                <th>N° OC</th>
-                <th>Fecha Creación</th>
-                <th>Proveedor</th>
-                <th>Insumo Principal</th>
-                <th class="text-center">Cantidad</th>
-                <th class="text-end">Total</th>
-                <th>Estado</th>
-                <th>Tracking</th>
-                <th class="text-center">Acciones</th>
+                <th class="text-center align-middle" style="background-color: #0d6efd; color: white;">N° OC</th>
+                <th class="text-center align-middle" style="background-color: #0d6efd; color: white;">Fecha Creación</th>
+                <th class="text-center align-middle" style="background-color: #0d6efd; color: white;">Proveedor</th>
+                <th class="text-center align-middle" style="background-color: #0d6efd; color: white;">Insumo Principal</th>
+                <th class="text-center align-middle" style="background-color: #0d6efd; color: white;">Cantidad</th>
+                <th class="text-end align-middle" style="background-color: #0d6efd; color: white;">Total</th>
+                <th class="text-center align-middle" style="background-color: #0d6efd; color: white;">Estado</th>
+                <th class="text-center align-middle" style="background-color: #0d6efd; color: white;">Tracking</th>
+                <th class="text-center align-middle" style="background-color: #0d6efd; color: white;">Acciones</th>
             </tr>
         </thead>
         <tbody>
             {% for oc in ordenes_list %}
-            <tr>
+            <tr >
                 <td><a href="#">{{ oc.numero_orden }}</a></td> {# Enlace a detalle de OC (futuro) #}
                 <td>{{ oc.fecha_creacion|date:"d/m/Y H:i" }}</td>
                 <td>{{ oc.proveedor.nombre|default_if_none:"N/A" }}</td>
@@ -45,7 +45,7 @@
                 <td class="text-center">{{ oc.cantidad_principal|default_if_none:"-" }}</td>
                 <td class="text-end">${{ oc.total_orden|floatformat:2 }}</td>
                 <td>
-                    <span class="badge 
+                    <span class="badge
                         {% if oc.estado == 'PENDIENTE_COMPRAR' %}bg-warning text-dark
                         {% elif oc.estado == 'SOLICITADA' %}bg-info
                         {% elif oc.estado == 'RECIBIDA' %}bg-success
@@ -66,4 +66,8 @@
         </tbody>
     </table>
 </div>
+
+
+
+
 {% endblock %}
