--- a/App_LUMINOVA/templates/compras/desglose.html
+++ b/App_LUMINOVA/templates/compras/desglose.html
@@ -11,18 +11,18 @@
             <hr class="text-white">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:compras_lista_oc' %}">
+                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:compras' %}">
                         <i class="bi bi-list-ul me-2"></i> <span class="ms-2">Listado de OC</span>
                     </a>
                 </li>
                 <li class="nav-item mt-2">
-                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:compras_desglose' %}">
-                        <i class="bi bi-box-seam-fill"></i> <span class="ms-2">Desglose de Componentes</span>
+                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:desglose' %}">
+                        <i class=""></i> <span class="ms-2">Desglose de componentes</span>
                     </a>
                 </li>
                 <li class="nav-item mt-2">
-                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:compras_seguimiento' %}">
-                        <i class="bi bi-truck me-2"></i> <span class="ms-2">Seguimiento de Compras</span>
+                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:seguimiento' %}">
+                        <i class="bi bi-truck me-2"></i> <span class="ms-2">seguimiento de compras</span>
                     </a>
                 </li>
                 </ul>
@@ -37,6 +37,7 @@
     <table class="table">
   <thead class="table-primary rounded-top">
     <tr>
+
       <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">N°OC</th>
       <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">Estado de OC</th>
       <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">Categoria</th>
@@ -44,17 +45,16 @@
       <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">Cantidad de items</th>
       <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">Monto Total (US$$)</th>
       <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">Fecha Estimada de Entrega</th>
-      <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">N°Tracking</th>
+
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td class="text-center align-middle"><a href="#">OCOOO5</a></td>
+      <td class="text-center align-middle"><a href="{% url 'App_LUMINOVA:desglose2' %}">OCOOO5</a></td>
       <td class="text-center align-middle">• Pendiente a comprar</td>
       <td class="text-center align-middle">Modulos led</td>
       <td class="text-center align-middle">22/07/2025</td>
       <td class="text-center align-middle">4</td>
-      <td class="text-center align-middle"></td>
       <td class="text-center align-middle"></td>
       <td class="text-center align-middle"></td>
     </tr>
@@ -66,7 +66,6 @@
       <td class="text-center align-middle">4</td>
       <td class="text-center align-middle"></td>
       <td class="text-center align-middle"></td>
-      <td class="text-center align-middle"></td>
     </tr>
     <tr>
       <td class="text-center align-middle">OCOOO3</td>
@@ -74,7 +73,6 @@
       <td class="text-center align-middle">Lentes para iluminación led</td>
       <td class="text-center align-middle">22/07/2025</td>
       <td class="text-center align-middle">4</td>
-      <td class="text-center align-middle"></td>
       <td class="text-center align-middle"></td>
       <td class="text-center align-middle"></td>
     </tr>
