--- a/App_LUMINOVA/templates/compras/seguimiento.html
+++ b/App_LUMINOVA/templates/compras/seguimiento.html
@@ -11,17 +11,17 @@
             <hr class="text-white">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:compras' %}">
+                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:compras_lista_oc' %}">
                         <i class="bi bi-list-ul me-2"></i> <span class="ms-2">Listado de OC</span>
                     </a>
                 </li>
                 <li class="nav-item mt-2">
-                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:desglose' %}">
+                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:compras_desglose' %}">
                         <i class="bi bi-box-seam-fill"></i> <span class="ms-2">Desglose de Componentes</span>
                     </a>
                 </li>
                 <li class="nav-item mt-2">
-                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:seguimiento' %}">
+                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:compras_seguimiento' %}">
                         <i class="bi bi-truck me-2"></i> <span class="ms-2">Seguimiento de Compras</span>
                     </a>
                 </li>
@@ -34,55 +34,48 @@
 
     <h1 class = "text-center">Ordenes de compra pendiente</h1>
 
-    <table class="table">
-  <thead class="table-primary rounded-top">
-    <tr>
-      <th scope="col" class="text-center align-middle">N°OC</th>
-      <th scope="col" class="text-center align-middle">Estado de OC</th>
-      <th scope="col" class="text-center align-middle">Categoria</th>
-      <th scope="col" class="text-center align-middle">Fecha</th>
-      <th scope="col" class="text-center align-middle">Cantidad de items</th>
-      <th scope="col" class="text-center align-middle">Monto Total (US$$)</th>
-      <th scope="col" class="text-center align-middle">Fecha Estimada de Entrega</th>
-      <th scope="col" class="text-center align-middle">N°Tracking</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td class="text-center align-middle">OCOOO5</td>
-      <td class="text-center align-middle">• Solicitado</td>
-      <td class="text-center align-middle">Modulos Led dob</td>
-      <td class="text-center align-middle">22/07/2025</td>
-      <td class="text-center align-middle">4</td>
-      <td class="text-center align-middle">250103,29</td>
-      <td class="text-center align-middle">21/09/2025</td>
-      <td class="text-center">
-        <a href="{% url 'App_LUMINOVA:tracking' %}">ABC123456</a>
-      </td>
-    </tr>
-    <tr>
-      <td class="text-center align-middle">OCOOO4</td>
-      <td class="text-center align-middle">• Solicitado</td>
-      <td class="text-center align-middle">Led with holder</td>
-      <td class="text-center align-middle">22/07/2025</td>
-      <td class="text-center align-middle">4</td>
-      <td class="text-center align-middle">250103,29</td>
-      <td class="text-center align-middle">20/09/2025</td>
-      <td class="text-center align-middle">JKL123456</td>
-    </tr>
-    <tr>
-      <td class="text-center align-middle">OCOOO3</td>
-      <td class="text-center align-middle">• Solicitado</td>
-      <td class="text-center align-middle">Reflector led</td>
-      <td class="text-center align-middle">22/07/2025</td>
-      <td class="text-center align-middle">4</td>
-      <td class="text-center align-middle">250103,29</td>
-      <td class="text-center align-middle">25/08/2025</td>
-      <td class="text-center align-middle">ALC123456</td>
-    </tr>
 
-  </tbody>
-</table>
+
+
+      <table class="table">
+        <thead class="table-primary rounded-top">
+          <tr>
+            <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">N°OC</th>
+            <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">Estado de OC</th>
+            <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">Categoria</th>
+            <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">Fecha</th>
+            <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">Cantidad de items</th>
+            <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">Monto Total (US$$)</th>
+            <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">Fecha Estimada de Entrega</th>
+            <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">N°Tracking</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for oc in ordenes_solicitadas_list %}
+            <tr>
+              <td class="text-center align-middle">{{ oc.numero_orden }}</td>
+              <td class="text-center align-middle">{{ oc.estado.nombre }}</td>
+              <td class="text-center align-middle">{{ oc.insumo_principal.descripcion }}</td>
+              <td class="text-center align-middle">{{ oc.fecha_creacion|date:"d/m/Y" }}</td>
+              <td class="text-center align-middle">{{ oc.cantidad_principal }}</td>
+              <td class="text-center align-middle">{{ oc.total_orden_compra }}</td>
+              <td class="text-center align-middle">{{ oc.fecha_estimada_entrega|date:"d/m/Y" }}</td>
+              <td class="text-center">
+                {% if oc.numero_tracking %}
+                  <a href="{% url 'App_LUMINOVA:compras_tracking_pedido' oc.numero_orden %}">{{ oc.numero_tracking }}</a>
+
+                {% endif %}
+              </td>
+            </tr>
+          {% empty %}
+            <tr>
+              <td colspan="8" class="text-center">No hay órdenes en seguimiento.</td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+
+
 <style>
     thead.rounded-top th:first-child {
         border-top-left-radius: 10px;
@@ -91,4 +84,6 @@
         border-top-right-radius: 10px;
     }
 </style>
+
+
 {% endblock %}
